# misc

./: .gitignore  README.md  contesting_for_mutex.c  example_shell.nix  fork-pid.c  subtitles.sh
BadApple/: BadApple.cc  CMakeLists.txt  shell.nix
Mandelbrot/: CMakeLists.txt  mandelbrot.cc
algorithms/: CMakeLists.txt  PQ.cpp  PQ.h  PQ_Element.h  graph.cc  graph.hh  list.cc  main.cc  pqueue.hh  shortest_path.cc  shortest_path.hh  smartPointers.cc
algorithms/quicksort/: CMakeLists.txt  main.cc
minDistanceEdit/: CMakeLists.txt  minDistanceEdit.cc
minishell/: CMakeLists.txt  minishell.cc
os-stuff/condVariables/: CMakeLists.txt  main.c
os-stuff/pipe/: CMakeLists.txt  main.c
os-stuff/semaphores/: CMakeLists.txt  main.c
